--- a/src/style/WeatherTileComponent.css
+++ b/src/style/WeatherTileComponent.css
@@ -24,6 +24,8 @@
     width: 100%;
     height: 120px;
     margin-left: 0px;
+    margin-bottom: 10px;
+    margin-top: 10px;
     margin-right: 0px;
   }
 }
